force-app/main/default/objects/Designation_Detail_Portal__c.object
<CustomObject>
    <description>This object holds information about how a pledge&apos;s allocations of money in different designations</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>The total amount of payments going into one designation.</description>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Designation_Detail_Name_Auto_Number__c</fullName>
        <displayFormat>DD-{0000000}</displayFormat>
        <label>Designation Detail Name Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Designation</label>
        <referenceTo>Designation_Portal__c</referenceTo>
        <relationshipName>Designation_Details_Designation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <description>Transaction Summary Record</description>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipName>Designation_Details_Transaction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ascend_Designation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Designation</label>
        <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
        <relationshipLabel>Designation Details (Portal)</relationshipLabel>
        <relationshipName>Designation_ascend_Designation</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Designation Detail (Portal)</label>
    <nameField>
        <label>Designation Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Designation Details (Portal)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>